fix: calendly widget layout bug

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -18,7 +18,6 @@
     padding: 0.75rem;
     gap: 2rem;
     background-color: #eeebeb;
-    border-radius: 1rem;
     cursor: pointer;
     overflow: hidden;
 
@@ -49,7 +48,6 @@
           background-color: #808080;
           color: white;
           padding: 0.1rem 0.3rem;
-          border-radius: 0.2rem;
           font-size: 0.8rem;
           line-height: 1;
           pointer-events: none;
@@ -91,7 +89,6 @@
 
       .schedule-cta {
         background-color: #5757ff;
-        border-radius: calc(0.75rem - 8px);
         padding: 0.15rem 0.5rem;
         display: flex;
         align-items: center;
